# DynamicsSimulator

./: .gitignore  CMakeLists.txt  DynamicsSimulator.sln  Project.xcf  README.md
.github/workflows/: cmake-multi-platform.yml
DynamicsSimulator/: CMakeLists.txt  DynamicsSimulator.vcxproj  DynamicsSimulator.vcxproj.filters  main.py  output.csv  requirements.txt  visualizer.py
DynamicsSimulator/src/: DynamicsSimulator.h  Main.cpp  Scene.cpp  Scene.h  Test.cpp
DynamicsSimulator/src/Display/: Graphics.cpp  Graphics.h  Widget.cpp  Widget.h
DynamicsSimulator/src/Physics/: Physics.h
DynamicsSimulator/src/Physics/Force/: Force.cpp  Force.h
DynamicsSimulator/src/Physics/Objects/: Hitbox.cpp  Hitbox.h  MovableObject.cpp  MovableObject.h
DynamicsSimulator/src/Physics/ReferenceFrames/: NoFrictionTerrestrialReferenceFrame.cpp  NoFrictionTerrestrialReferenceFrame.h  ReferenceFrame.cpp  ReferenceFrame.h
DynamicsSimulator/src/Physics/Vector/: Vector2D.cpp  Vector2D.h
